--- a/Online Subtitle/popup/popup.css
+++ b/Online Subtitle/popup/popup.css
@@ -75,7 +75,7 @@ h1 {
   color: #b0b0b0;
 }
 
-select, input[type="range"] {
+select, input[type="range"], input[type="password"] {
   width: 100%;
   padding: 10px;
   border: 1px solid rgba(255, 255, 255, 0.2);
@@ -86,7 +86,15 @@ select, input[type="range"] {
   cursor: pointer;
 }
 
-select:focus {
+input[type="password"] {
+  cursor: text;
+}
+
+input[type="password"]::placeholder {
+  color: rgba(255, 255, 255, 0.4);
+}
+
+select:focus, input[type="password"]:focus {
   outline: none;
   border-color: #4fc3f7;
 }
@@ -109,6 +117,17 @@ input[type="range"]::-webkit-slider-thumb {
   border-radius: 50%;
   background: #4fc3f7;
   cursor: pointer;
+}
+
+.api-link {
+  font-size: 11px;
+  color: #4fc3f7;
+  text-decoration: none;
+  margin-top: 4px;
+}
+
+.api-link:hover {
+  text-decoration: underline;
 }
 
 .button-group {
